fixed bug 1523763 of sf.net (more info in exception)